# QtSvgEditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  make.bat
apps/: CMakeLists.txt
apps/src/: main.cpp
apps/svgeditor/: CMakeLists.txt
apps/svgeditor/src/: main.cpp
apps/viewer/: CMakeLists.txt
apps/viewer/src/: main.cpp
libs/: CMakeLists.txt
libs/commands/: CMakeLists.txt
libs/commands/include/: addelementcommand.h  addelementscommand.h  changeattributecommand.h  changeattributescommand.h  changedocattributecommand.h  changeelementsattributecommand.h  command.h  command_global.h  commandmanager.h  deleteelementcommand.h  deleteelementscommand.h  edittextcommand.h  moveelementcommand.h  moveelementscommand.h  ordercommand.h  removeelementcommand.h  resizeelementcommand.h
libs/commands/src/: addelementcommand.cpp  changeattributecommand.cpp  changedocattributecommand.cpp  commandmanager.cpp  deleteelementcommand.cpp  inserttextcommand.cpp  moveelementcommand.cpp  removeelementcommand.cpp  resizeelementcommand.cpp  rotateelementcommand.cpp
libs/core/: CMakeLists.txt
libs/core/include/: svgdocument.h  svgelement.h  svgellipse.h  svgexception.h  svgfreehand.h  svgline.h  svgparser.h  svgpolygon.h  svgrect.h  svgstar.h  svgtext.h  svgwriter.h
libs/core/src/: svgdocument.cpp  svgelement.cpp  svgellipse.cpp  svgfreehand.cpp  svgline.cpp  svgparser.cpp  svgpolygon.cpp  svgrect.cpp  svgstar.cpp  svgtext.cpp  svgwriter.cpp
libs/file/: CMakeLists.txt
libs/file/src/: documentmanager.cpp  imageexporter.cpp  svgserializer.cpp
libs/gui/: CMakeLists.txt
libs/gui/include/: canvaspropertypanel.h  canvasview.h  clipboard.h  ellipsepropertypanel.h  graphicssvgitem.h  linepropertypanel.h  mainwindow.h  menubar.h  multipropertypanel.h  pathpropertypanel.h  propertypanel.h  propertypanelfactory.h  rectpropertypanel.h  sidetoolbar.h  textpropertypanel.h  ui_mainwindow.h
libs/gui/src/: canvaspropertypanel.cpp  canvasview.cpp  clipboard.cpp  dockmanager.cpp  ellipsepropertypanel.cpp  graphicssvgitem.cpp  layerpanel.cpp  linepropertypanel.cpp  mainwindow.cpp  menubar.cpp  multipropertypanel.cpp  pathpropertypanel.cpp  pentagonpropertypanel.cpp  previewpanel.cpp  propertypanel.cpp  propertypanelfactory.cpp  rectanglepropertypanel.cpp  rectpropertypanel.cpp  shapepropertypanel.cpp  sidetoolbar.cpp  textpropertypanel.cpp
libs/interaction/: CMakeLists.txt
libs/interaction/include/: canvascontroller.h  ellipsetoolcontroller.h  freehandtoolcontroller.h  hexagontoolcontroller.h  linetoolcontroller.h  movetoolcontroller.h  pentagontoolcontroller.h  polygontoolcontroller.h  recttoolcontroller.h  selectionmanager.h  startoolcontroller.h  texttoolcontroller.h  toolcontroller.h  toolid.h  zoomintoolcontroller.h  zoomouttoolcontroller.h  zoomtoolcontroller.h
libs/interaction/src/: canvascontroller.cpp  ellipsetoolcontroller.cpp  freehandtoolcontroller.cpp  hexagontoolcontroller.cpp  linetoolcontroller.cpp  movetoolcontroller.cpp  pentagontoolcontroller.cpp  polygontoolcontroller.cpp  recttoolcontroller.cpp  selectionmanager.cpp  startoolcontroller.cpp  starttoolcontroller.cpp  texttoolcontroller.cpp  zoomintoolcontroller.cpp  zoomouttoolcontroller.cpp  zoomtoolcontroller.cpp
libs/utils/: CMakeLists.txt
libs/utils/src/: configmanager.cpp  pluginmanager.cpp
resources/: resources.qrc
resources/styles/: style.qss
resources/translations/: app_en_US.qm  app_en_US.ts
tests/: CMakeLists.txt
tests/commands_tests/: CMakeLists.txt
tests/core_tests/: CMakeLists.txt
tests/gui_tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt
